--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-rdfa-editor-related-url-plugin",
+  "name": "@lblod/ember-rdfa-editor-related-url-plugin",
   "version": "0.0.0",
   "description": "The default blueprint for ember-cli addons.",
   "keywords": [
@@ -21,10 +21,13 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.7.3"
+    "ember-cli-babel": "^7.7.3",
+    "ember-cli-htmlbars": "^3.0.1",
+    "ember-mu-transform-helpers": "^2.0.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^0.7.0",
+    "@lblod/ember-rdfa-editor-plugin-generator": "^0.2.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-cli": "~3.12.0",
     "ember-cli-dependency-checker": "^3.1.0",
@@ -32,9 +35,12 @@
     "ember-cli-htmlbars": "^3.0.1",
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
+    "ember-cli-update": "^0.52.1",
+    "ember-concurrency": "^1.1.5",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^2.0.0",
