--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "ember-cli-babel": "^7.13.0",
     "ember-cli-htmlbars": "^4.2.0",
-    "ember-mu-transform-helpers": "^2.0.0"
+    "ember-mu-transform-helpers": "^2.0.0",
+    "ember-fetch": "^7.0.1",
   },
   "devDependencies": {
     "@ember/optional-features": "^1.1.0",
@@ -46,7 +47,6 @@
     "ember-concurrency-decorators": "^1.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
-    "ember-fetch": "^7.0.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.6.0",
